--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
         <string name="drawer_item_open_source">Open Source</string>
         <string name="drawer_item_contact">Contact</string>
 
+    <string name="dialog_rename_shopping_list_name">Название списка</string>
+    <string name="dialog_save">Сохранить</string>
+    <string name="dialog_cancel">Отменить</string>
+    <string name="new_shopping_list_name">Новый список</string>
 
 
 </resources>
