--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Shopping List</string>
     <string name="action_settings">Settings</string>
+    <string name="drawer_item_about">О приложении</string>
+
+
 
         <string name="drawer_item_home">Home</string>
         <string name="drawer_item_free_play">Free Play</string>
@@ -12,10 +15,15 @@
 
     <string name="dialog_rename_shopping_list_name">Название списка</string>
     <string name="dialog_save">Сохранить</string>
+    <string name="dialog_ok">OK</string>
     <string name="dialog_cancel">Отменить</string>
     <string name="dialog_select">Выбрать</string>
     <string name="new_shopping_list_name">Новый список</string>
     <string name="dialog_select_favorites">Выберите списки</string>
     <string name="dialog_delete_title">Удалить список?</string>
+    <string name="txt_sms">Купи, пожалуйста! </string>
+    <string name="developer"> Разработчик: Езерская Наталья</string>
+    <string name="version"> Версия 1.0 </string>
+
 
 </resources>
